# EML-Math-App

./: .gitignore  EML-Math-App.spec  LICENSE  README.md  build_apk.bat  build_exe.bat  buildozer.spec  pyproject.toml
.github/workflows/: ci.yml
scripts/: screenshot_formulas.py
src/eml_math_app/: __init__.py  __main__.py  app.py
src/eml_math_app/kv/: about.kv  builder.kv  compress.kv  constants.kv  convert.kv  export.kv  home.kv  root.kv
src/eml_math_app/screens/: __init__.py  about.py  builder.py  compress.py  constants.py  convert.py  export.py  home.py
src/eml_math_app/services/: __init__.py  famous.py  formats.py  hit_test.py  latex_renderer.py  parser.py  tree_render.py
src/eml_math_app/widgets/: __init__.py  copy_chip.py  expr_input.py  formula_input.py  latex_preview.py  svg_view.py
tests/: test_back_conversion.py  test_formulas.py  test_normalize.py  test_smoke.py
